slurm-rishon3-136670.out
cpu-bind=MASK - rishon3, task  0  0 [21715]: mask 0x400000004 set
cpu-bind=MASK - rishon3, task  0  0 [21715]: mask 0x400000004 set
*** SLURM BATCH JOB 'test_job' STARTING ***
*** Activating environment cs236605-hw ***
  File "testRun3.py", line 38
    for s in [0.85,0.9,0.95]
                           ^
SyntaxError: invalid syntax
*** SLURM BATCH JOB 'test_job' DONE ***
